@@ -3,7 +3,6 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.RandomAccessFile;
@@ -29,7 +28,7 @@ class DownloadThread extends ClientThread {
 
     private Client client;
     private int fileID;
-    private String server;
+    //   private String server;
     private Socket conn;
     private InputStreamReader in;
     private BufferedReader reader;
@@ -38,15 +37,20 @@ class DownloadThread extends ClientThread {
     private long pos;
     private File File;
     private RandomAccessFile oS;
-    private InputStream inStream;
+    // private InputStream inStream;
     int count;
     long totalCount;
     private long fileSize;
     private ConcurrentLinkedQueue<String> msgQueue;
     private String fileName;
     private String clientAddr;
-    private Long curSize;
+    private long time;
+    //private int limitrate;
+    private long rate;
+    // private Long curSize;
     private int id;
+    private long t;
+    private long c;
 
     @Override
     public void sendMsg(String str) {
@@ -74,6 +78,12 @@ class DownloadThread extends ClientThread {
         /* More here! */
         // SET RATE LIMT
         //
+        if (msg.matches("LIMITRATE [-+]?[0-9]+")) {
+            String[] lst = msg.split(" ");
+            int tempRate = Integer.valueOf(lst[1]);
+
+            out.format("DOWNLOADRATE %d\n", tempRate).flush();
+        }
 
     }
 
@@ -100,8 +110,9 @@ class DownloadThread extends ClientThread {
                     this.client.gui.model.addFile(new Files(fileID, this.fileName, 0 + " kB", 0, clientAddr, fileHash, "DOWNLOADING"), this);
 
                 } else {
-                    if (client.dataManager.getStatus(fileID).compareTo("DOWNLOADING") == 0)
-                        return ;
+                    if (client.dataManager.getStatus(fileID).compareTo("DOWNLOADING") == 0) {
+                        return;
+                    }
                     int i = 0;
                     while (i < client.gui.model.getRowCount()) {
                         if ((Integer) client.gui.model.getValueAt(i, 0) == fileID) {
@@ -109,8 +120,8 @@ class DownloadThread extends ClientThread {
                         }
                         i++;
                     }
-                    //this.id = id;
-                    client.gui.model.setValueAt("DOWNLOADING", i, 6);
+                    this.id = i;
+                    client.gui.model.setValueAt("DOWNLOADING", this.id, 6);
                     client.dataManager.updateStatus(fileID, "DOWNLOADING");
                     client.gui.model.setSwingWorker(i, this);
                 }
@@ -134,7 +145,6 @@ class DownloadThread extends ClientThread {
 
         try {
             oS = new RandomAccessFile(File, "rw");
-
         } catch (FileNotFoundException ex) {
             Logger.getLogger(DownloadThread.class.getName()).log(Level.SEVERE, null, ex);
         }
@@ -145,7 +155,7 @@ class DownloadThread extends ClientThread {
 
         try {
             this.conn = new Socket(clientAddr, 1235);
-            conn.setSoTimeout(10000);
+            //  conn.setSoTimeout(10000);
 
             this.in = new InputStreamReader(conn.getInputStream());
             //this.BIS = new BufferedInputStream(conn.getInputStream());
@@ -161,44 +171,43 @@ class DownloadThread extends ClientThread {
             if (line.matches("OK [0-9]+")) {
                 lst = line.split(" ");
                 oS.seek(pos);
-                this.fileSize = new Integer(lst[1]).longValue();
+                this.fileSize = Long.valueOf(lst[1]);
                 System.out.println("Download started!");
                 byte[] buff = new byte[4096];
-                int i = 0;
+
+                this.t = System.currentTimeMillis();
+                this.c = this.totalCount;
+                time = System.nanoTime();
+                new Thread(new CaluRate()).start();
+
                 while (totalCount < fileSize) {
                     this.recvMsg();
-                    // Thread.yield();
-
-                    //if (conn.getInputStream().available() > 0) {
                     count = conn.getInputStream().read(buff);
 
                     if (count < 0) {
-                        System.err.println("DOWNLOAD ERROR!");
-                        this.closeThread();
-                        return;
+                        throw new IOException();
                     }
                     oS.write(buff, 0, count);
                     totalCount += count;
-                    // newString.valueOf(totalCount *100/ fileSize)
-                    publish(Long.valueOf(totalCount * 100 / fileSize).intValue());
-                    // client.dataManager.updateCurrentSize(fileID, totalCount);
-                    //}
-                }
-                System.out.println("Finish download file");
-                closeThread();
-                client.dataManager.updateStatus(fileID, "COMPLETED");
 
-                return;
-                //client.threadManager.removeThread(fileID);
+                    publish(new ThreadInfo(Long.valueOf(totalCount * 100 / fileSize).intValue(), this.getRate()));
+                }
+
+                client.dataManager.updateStatus(fileID, "SEEDED");
+                client.dataManager.updateCurrentSize(fileID, fileSize);
+                client.gui.model.setValueAt("SEEDED", this.id, 6);
+                //client.gui.fileTable.repaint();
+                System.out.println("Finish download file");
 
             } else {
-                System.err.println("DOWNLOAD ERROR!");
+
+                this.closeThread();
+                System.out.println("DOWNLOAD ERROR!");
             }
 
         } catch (UnknownHostException ex) {
             Logger.getLogger(DownloadThread.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IOException ex) {
-            //Logger.getLogger(UploadThread.class.getName()).log(Level.SEVERE, null, ex);
             closeThread();
         } finally {
             if (conn != null) {
@@ -218,30 +227,31 @@ class DownloadThread extends ClientThread {
 
     public DownloadThread(int fileID, long pos, Client aThis) {
         this.client = aThis;
-        //totalCount = 0;
         this.pos = pos;
         totalCount = pos;
         this.fileID = fileID;
         msgQueue = new ConcurrentLinkedQueue<String>();
-        //  this.client.threadManager.addThread(this.fileID, this);
     }
 
-    public void setRate(int speed) {
-        throw new UnsupportedOperationException("Not supported yet.");
+    public void setRate() {
+        long time1 = System.nanoTime();
+        long dtime = time1 - time;
+        // if (time != 0) {
+        time = time1;
+        rate = (int) (count * 1000 / (dtime / 1000));
+        //}
+        time = time1;
+        //throw new UnsupportedOperationException("Not supported yet.");
     }
 
     @Override
     public void closeThread() {
-        int i = 0;
-        while (i < client.gui.model.getRowCount()) {
-            if ((Integer) client.gui.model.getValueAt(i, 0) == fileID) {
-                break;
-            }
-            i++;
-        }
+
+        client.gui.model.setValueAt("PAUSED", this.id, 6);
+        // client.gui.fileTable.repaint();
         client.dataManager.updateCurrentSize(fileID, totalCount);
         client.dataManager.updateStatus(fileID, "PAUSED");
-        client.gui.model.setValueAt("PAUSED", i, 6);
+        //client.gui.model.
         System.out.println("Closed thread");
         //client.threadManager.removeThread(this.id);
     }
@@ -252,8 +262,8 @@ class DownloadThread extends ClientThread {
     }
 
     @Override
-    public int getRate() {
-        return -1;
+    public long getRate() {
+        return rate;
         //throw new UnsupportedOperationException("Not supported yet.");
     }
 
@@ -264,20 +274,51 @@ class DownloadThread extends ClientThread {
     }
 
     @Override
-    protected void process(java.util.List<Integer> c) {
+    protected void process(java.util.List<ThreadInfo> c) {
         int i = 0;
 
         while (i < client.gui.model.getRowCount()) {
             int k = (Integer) client.gui.model.getValueAt(i, 0);
             if (k == this.fileID) {
-                client.gui.model.setValueAt(c.get(c.size() - 1), i, 3);
+                client.gui.model.setValueAt(c.get(c.size() - 1).getP(), i, 3);
+                client.gui.model.setValueAt(c.get(c.size() - 1).getRate(), i, 2);
             }
             i++;
         }
     }
 
+    @Override
     protected Integer doInBackground() throws Exception {
         this.Run();
         return 0;
+    }
+
+    private class CaluRate implements Runnable {
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    caluRate();
+                    Thread.sleep(600);
+                } catch (InterruptedException ex) {
+                    Logger.getLogger(UploadThread.class.getName()).log(Level.SEVERE, null, ex);
+                }
+            }
+        }
+    }
+
+    public void caluRate() {
+        long t1 = System.currentTimeMillis();
+        long deltaT = t1 - this.t;
+        long c1 = this.totalCount;
+        long deltaC = c1 - this.c;
+
+        if (deltaT > 0) {
+            this.rate = deltaC * 1000 / deltaT / 1024;
+        }
+
+        t = t1;
+        c = c1;
     }
 }
